# document-assistant

./: app.py  ask.py  backend.py  chat_history.db  chunk_docs.py  database.py  embed_docs.py  load-documents.py  main.py  pyproject.toml  test_setup.py  vector_store.py
chroma_db/: chroma.sqlite3
